# facebonk

./: .gitignore  README.md  cli.js  forge.config.cjs  package-lock.json  package.json  pear.app.json  schema.js
bare/: package-lock.json  package.json  pear-host.cjs  pear-runtime-host.cjs
cli/: index.js  storage-path.js
consumer-core/: index.js
consumer-electron/: index.js
core/: auth-link.js  connect.js  identity-context.js  identity-manager.js  index.js  profile-card.js
docs/: approach.html  approach.md  architecture.html  architecture.md  bonkdocs-auth.md  consumer-sdk.md  facebonk-plan.md  footprint-notes.md  fundamentals.md  manual-testing.md
docs/diagrams/: facebonk-layout.mmd  facebonk-multi-handler.mmd  facebonk-share-card.mmd
electron/: main.cjs  preload.cjs
example/: README.md  auth-client.mjs
example/consumer-app/: app.js  index.html  server.mjs
renderer/: app.js  auth-link.js  index.html  styles.css
scripts/: prepare-sidecar.mjs
spec/db/: db.json  index.js  messages.js
spec/dispatch/: dispatch.json  index.js
spec/schema/: index.js  schema.json
src/: identity-context.js  identity-manager.js  index.js  schema.js
tauri/: Cargo.toml  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: lib.rs  main.rs
test/: auth-link.test.js  consumer-core.test.js  consumer-electron.test.js  e2e-auth-example.test.js  identity-context.test.js  storage-path.test.js
test/helpers/: temp-dir.js
web/: README.md
