[package]
name = "facebonk"
version = "0.1.0"
description = "Facebonk desktop steward app with a thin Tauri host and local Bare backend"
authors = ["mikker"]
edition = "2021"

[lib]
name = "facebonk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
